--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="parent">
-      <h1>naslov</h1>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquam
-        omnis, ullam neque cumque libero minima porro sequi hic ab repudiandae,
-        illo dolorem? Sequi eligendi, enim libero doloribus temporibus quidem.
-      </p>
+    <div class="header">
+      <img id="img1"src="./moonsamabrandkit/moonsamalogoheader.png" alt="moonsamalogoheader">
+      <a href="#default"></a>
+        <div class="header-right">
+        <a  class="#active"href="#home"><b>Home</b></a>
+        <a  href="#explore"><b>Explore</b></a>
+        <a  href="#about"><b>About</b></a>
+        </div>
+      </div>
     </div>
+    <section class="section1">
+      <h1>PORTAL ZA INFORMISANJE O <span class="naslov">MOONSAMA NFT EKOSISTEMU</span></h1>
+      <p>JEDAN OD NAJBOLJIH NFT EKOSISTEMA SA JEDINSTVENOM ZAJEDNICOM</p>
+    </section>
+<section class="section2">
+  
+</section>
   </body>
 </html>
