homework for itcamp

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Moonsama NFT Ekosistem</title>
   </head>
   <body>
     <div class="header">
@@ -23,7 +23,11 @@
       <p>JEDAN OD NAJBOLJIH NFT EKOSISTEMA SA JEDINSTVENOM ZAJEDNICOM</p>
     </section>
 <section class="section2">
+<img src="./moonsamabrandkit/Moonsama49.png" alt="moonsama49">
+</section>
+<section class="section3">
 
+  
 </section>
   </body>
 </html>
