--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 <img src="./moonsamabrandkit/Moonsama49.png" alt="moonsama49">
 </section>
 <section class="section3">
-
+  <h1 class="h2">Na vrhuncu Web 3.0 tehnologije</h1>
+  <h2 class="h3">MOONSAMA EKOSISTEM</h2>
+  <p>Ovaj ekosistem vam nudi sve, od metaversa do ostalih inovativnih tehnologija koje stvaraju jedinstvena iskustva koja se isticu.</p>
+  <p>Naš talentovani tim od preko 30 ljudi uključuje programere i umetnike uz naš umetnički studio koji oživljava nova iskustva i korisnost za korisnike i kreatore.</p>
+  <img src=".//moonsamabrandkit/ethereum-logo-landscape-purple.png" alt="ethlogo">
+  <img src=".//moonsamabrandkit/Polkadot_Logo_Horizontal_White.png" alt="polkadotlog">
+  <br>
+  <form target="_blank"  action="//drive.google.com/file/d/1bfGtVWHjZZQV_Xlg7pmFo_MO4K7OkOnc/view">
+  <button type="open"><b>POGLEDAJ EKOSISTEM <span id="span1">&bull;</span></button>
+  </form>  
   
 </section>
   </body>
