--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
   <img src=".//moonsamabrandkit/Polkadot_Logo_Horizontal_White.png" alt="polkadotlog">
   <br>
   <form target="_blank"  action="//drive.google.com/file/d/1bfGtVWHjZZQV_Xlg7pmFo_MO4K7OkOnc/view">
-  <button type="open"><b>POGLEDAJ EKOSISTEM <span id="span1">&bull;</span></button>
+  <button type="open">POGLEDAJ EKOSISTEM <span id="span1">&bull;</span></button>
   </form>  
-  
 </section>
-  </body>
+<section class="section4">
+ <form action="#blank" target="_blank">
+  <button type="open"><span>&#9883;</span> ZAJEDNICA</button>
+  <button type="open"><span>&#9883;</span> TEHNOLOGIJE</button>
+  <button type="open"><span>&#9883;</span> METAVERSOVI</button>
+  <button type="open"><span>&#9883;</span> MARKET</button>
+  <button type="open"><span>&#9883;</span> KOLEKCIJE</button>
+ </form>
+</section>
+<section class="section5">
+<!-- dodati moonsamu i display -->
+</section>
+</body>
 </html>
