--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
       </div>
     </div>
     <section class="section1">
-      <h1>PORTAL ZA INFORMISANJE O <span class="naslov">MOONSAMA NFT EKOSISTEMU</span></h1>
+      <h1>PORTAL ZA INFORMISANJE O <span id="spana">MOONSAMA NFT EKOSISTEMU</span></h1>
       <p>JEDAN OD NAJBOLJIH NFT EKOSISTEMA SA JEDINSTVENOM ZAJEDNICOM</p>
+      <form target="_blank" action="">
+        <button type="click">PRIDRUZI SE EKOSISTEMU <span>&raquo;</span></button>
+      </form>
     </section>
 <section class="section2">
-<img src="./moonsamabrandkit/Moonsama49.png" alt="moonsama49">
+  <img src="./moonsamabrandkit/pondsamapocetnagif.gif" alt="pondsamagif">
 </section>
 <section class="section3">
   <h1 class="h2">Na vrhuncu Web 3.0 tehnologije</h1>
