updates on the moonsama site

--- a/moonsama site/index.html
+++ b/moonsama site/index.html
@@ -5,52 +5,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/4cc7011bc6.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Moonsama NFT Ekosistem</title>
   </head>
   <body>
     <div class="header">
-      <img id="img1"src="./moonsamabrandkit/moonsamalogoheader.png" alt="moonsamalogoheader">
+      <img
+        id="img1"
+        src="./moonsamabrandkit/moonsamalogoheader.png"
+        alt="moonsamalogoheader"
+      />
       <a href="#default"></a>
-        <div class="header-right">
-        <a  class="#active"href="#home"><b>Home</b></a>
-        <a  href="#explore"><b>Explore</b></a>
-        <a  href="#about"><b>About</b></a>
-        </div>
+      <div class="header-right">
+        <a class="#active" href="#home"><b>Home</b></a>
+        <a href="#explore"><b>Explore</b></a>
+        <a href="#about"><b>About</b></a>
       </div>
     </div>
+    <div class="header-rightbuttons">
+      <button type="submit">
+        <a href="#"
+          >UDJITE U MOONSAMU <span><i class="fa-solid fa-play icon"></i></span
+        ></a>
+      </button>
+      <button type="submit">
+        <a href="#"
+          >UDJITE U METAVERSE <span><i class="fa-solid fa-play icon"></i></span
+        ></a>
+      </button>
+    </div>
     <section class="section1">
-      <h1>PORTAL ZA INFORMISANJE O <span id="spana">MOONSAMA NFT EKOSISTEMU</span></h1>
+      <h1>
+        PORTAL ZA INFORMISANJE O <span id="spana">MOONSAMA NFT EKOSISTEMU</span>
+      </h1>
       <p>JEDAN OD NAJBOLJIH NFT EKOSISTEMA SA JEDINSTVENOM ZAJEDNICOM</p>
       <form target="_blank" action="">
-        <button type="click">PRIDRUZI SE EKOSISTEMU <span>&raquo;</span></button>
+        <button type="click">
+          PRIDRUZI SE EKOSISTEMU <span><i class="fa-solid fa-play"></i></span>
+        </button>
       </form>
     </section>
-<section class="section2">
- <video width="700px" height="400px" autoplay loop><source src="./moonsamabrandkit/art-pondsamasplashanimationpocetna.mp4"></video>
-</section>
-<section class="section3">
-  <h1 class="h2">Na vrhuncu Web 3.0 tehnologije</h1>
-  <h2 class="h3">MOONSAMA EKOSISTEM</h2>
-  <p>Ovaj ekosistem vam nudi sve, od metaversa do ostalih inovativnih tehnologija koje stvaraju jedinstvena iskustva koja se isticu.</p>
-  <p>Naš talentovani tim od preko 30 ljudi uključuje programere i umetnike uz naš umetnički studio koji oživljava nova iskustva i korisnost za korisnike i kreatore.</p>
-  <img src=".//moonsamabrandkit/ethereum-logo-landscape-purple.png" alt="ethlogo">
-  <img src=".//moonsamabrandkit/Polkadot_Logo_Horizontal_White.png" alt="polkadotlog">
-  <br>
-  <form target="_blank"  action="//drive.google.com/file/d/1bfGtVWHjZZQV_Xlg7pmFo_MO4K7OkOnc/view">
-  <button type="open">POGLEDAJ EKOSISTEM <span id="span1">&bull;</span></button>
-  </form>  
-</section>
-<section class="section4">
- <form action="#blank" target="_blank">
-  <button type="open"><span>&#9883;</span> ZAJEDNICA</button>
-  <button type="open"><span>&#9883;</span> TEHNOLOGIJE</button>
-  <button type="open"><span>&#9883;</span> METAVERSOVI</button>
-  <button type="open"><span>&#9883;</span> MARKET</button>
-  <button type="open"><span>&#9883;</span> KOLEKCIJE</button>
- </form>
-</section>
-<section class="section5">
-<!-- dodati moonsamu i display -->
-</section>
-</body>
+    <section class="section2">
+      <video autoplay loop muted>
+        <source
+          src="./moonsamabrandkit/art-pondsamasplashanimationpocetna.mp4"
+        />
+      </video>
+    </section>
+    <section class="section3">
+      <h1 class="h2">Na vrhuncu Web 3.0 tehnologije</h1>
+      <h2 class="h3">MOONSAMA EKOSISTEM</h2>
+      <p>
+        Ovaj ekosistem vam nudi sve, od metaversa do ostalih inovativnih
+        tehnologija koje stvaraju jedinstvena iskustva koja se isticu.
+      </p>
+      <p>
+        Naš talentovani tim od preko 30 ljudi uključuje programere i umetnike uz
+        naš umetnički studio koji oživljava nova iskustva i korisnost za
+        korisnike i kreatore.
+      </p>
+      <img
+        src=".//moonsamabrandkit/ethereum-logo-landscape-purple.png"
+        alt="ethlogo"
+      />
+      <img
+        src=".//moonsamabrandkit/Polkadot_Logo_Horizontal_White.png"
+        alt="polkadotlog"
+      />
+      <br />
+      <form
+        target="_blank"
+        action="//drive.google.com/file/d/1bfGtVWHjZZQV_Xlg7pmFo_MO4K7OkOnc/view"
+      >
+        <button type="open">
+          POGLEDAJ EKOSISTEM <span id="span1">&bull;</span>
+        </button>
+      </form>
+      <div class="ecoilustration">
+        <img src="./moonsamabrandkit/ecoillustrationsection3.png" alt="" />
+      </div>
+    </section>
+    <section class="section4">
+      <form action="#blank" target="_blank">
+        <button type="open"><span>&#9883;</span> ZAJEDNICA</button>
+        <button type="open"><span>&#9883;</span> TEHNOLOGIJE</button>
+        <button type="open"><span>&#9883;</span> METAVERSOVI</button>
+        <button type="open"><span>&#9883;</span> MARKET</button>
+        <button type="open"><span>&#9883;</span> KOLEKCIJE</button>
+      </form>
+    </section>
+    <div class="moonsamadoctor"></div>
+    <div class="whyus">
+      <div class="whyustext">
+        <h1>
+          iskusite NFT 2.0 <span>standard koji smo</span> izgradili sa našom
+          <span>zajednicom koja je na čelu</span>
+        </h1>
+        <h1>
+          angažujte se
+          <span>sa svojim prilagodljivim NFT-ovima u više</span> metaversova i
+          blokcejna
+        </h1>
+        <h1>
+          za sve OD <span>GRAĐEVINARA</span> DO IGRAČA I <span>UMETNIKA</span>
+        </h1>
+        <h1>
+          istražite ekosistem <span>radeći stvari </span>koje niko ranije
+          <span>nije radio</span>
+        </h1>
+      </div>
+    </div>
+    <div class="customizerexample">
+      <p>dsd</p>
+    </div>
+    <div class="milestones">
+      <h3>Dokaz o isporuci</h3>
+      <h1>PREKRETNICA</h1>
+    </div>
+  </body>
 </html>
